# botball-wipple

./: .gitignore  Cargo.toml  build.sh  project.wpl
.github/workflows/: build.yml
plugin/: .gitignore  Cargo.toml  build.sh
plugin/src/: lib.rs
project/src/: main.wpl
src/: lib.rs  libwallaby.wpl
