[package]
name = "plugin"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bigdecimal = "0.1.2"
botball = { git = "https://github.com/tyngsboroughrobotics/botball-rust" }
paste = "1.0.4"
wipple = { git = "https://github.com/wipplelang/wipple" }
wipple_plugins = { git = "https://github.com/wipplelang/wipple" }
